--- a/options.conf
+++ b/options.conf
@@ -1,14 +1,14 @@
 [package]
 name = liborcus
-url = https://dev-www.libreoffice.org/src/liborcus-0.13.4.tar.gz
+url = https://dev-www.libreoffice.org/src/liborcus-0.14.1.tar.gz
 archives = 
-giturl = 
+giturl = https://gitlab.com/orcus/orcus.git
 
 [autospec]
 # build 32 bit libraries
 32bit = false
 # allow package to build with test failures
-allow_test_failures = false
+allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
