--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = liborcus
-url = https://dev-www.libreoffice.org/src/liborcus-0.15.3.tar.gz
+url = https://dev-www.libreoffice.org/src/liborcus-0.16.1.tar.bz2
 archives = 
 giturl = https://gitlab.com/orcus/orcus.git
 domain = 
